[package]
name = "for_labs"
version = "0.1.0"
authors = ["Rob Conaway <rconaway@pillartechnology.com>"]
edition = "2018"

[dependencies]
array-init = "0.0.4"
sha2 = "0.8.0"
hex-literal = "0.1.1"
rand = "0.6"

[dependencies.num]
version = "0.2.0"
features = ["rand"]

[dev-dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 0